# bedlam-solver

./: .gitignore  CMakeLists.txt  README.md  bedlam-lite.json  bedlam.json  cube.py  renderer.py  shape.py  simples.json  solve.py  solver.py  soma.json  sort_test.py
compile/: README
src/: Cube.cpp  Cube.hpp  Shape.cpp  Shape.hpp  c-solver.cpp
